--- a/index.html
+++ b/index.html
@@ -1,43 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://cdn.staticfile.org/jquery/3.6.4/jquery.min.js"></script>
-</head>
-<body>
-    <button id = "btnGET">GET</button>
-    <button id = "btnPOST">POST</button>
-
-    <script>
-        $(function(){ 
-            //1.测试get接口
-            $('#btnGET').on('click', function(){
-                $.ajax({
-                    type:'GET',
-                    url:'http://127.0.0.1/api/get',
-                    data:{ name:'zs',age:20 },
-                    success:function(res){
-                        console.log(res)
-                    }
-
-                })
-            })
-            //2.测试post接口
-            $('#btnPOST').on('click', function(){
-                $.ajax({
-                    type:'POST',
-                    url:'http://127.0.0.1/api/post',
-                    data:{ bookname:'水浒传',author:'施耐庵' },
-                    success:function(res){
-                        console.log(res)
-                    }
-
-                })
-            })
-        })
-    </script>
-</body>
-</html>
+hyaihiajofjoajho就很低啊就好看i记得好好第哦啊hi还回复
